# graphrag_for_finance

./: .gitignore  README.md  pyproject.toml
graph_rag/config/: config.py
graph_rag/core/: chunking.py  generation.py  pdf_parser.py
graph_rag/core/retrievers/: bm25_retriever.py  faiss_retriever.py  graph_rag_retriever.py  hybrid_retriever.py
graph_rag/evaluation/: evaluate_graphrag.py
graph_rag/scripts/: annotation_utils.py  build_chunks.py  generate_answer_cli.py  graph_rag_integration.py  parse_fibo_to_kg.py  run_retriever.py
